Bug 280798: [xpath2] [hotbug] [patch] PsychoPath support for JDK 1.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=280798
As approved by PMC