@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2009 Andrea Bittau, University College London, and others
+ * Copyright (c) 2005, 2010 Andrea Bittau, University College London, and others
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     Andrea Bittau - initial API and implementation from the PsychoPath XPath 2.0
  *     David Carver (STAR) - bug 282223 - Implemented XSDuration type for castable checking.
+ *     Mukul Gandhi - bug 280798 - PsychoPath support for JDK 1.4
  *******************************************************************************/
 
 package org.eclipse.wst.xml.xpath2.processor.internal.types;
@@ -110,12 +111,10 @@ public class XSDuration extends CtrType implements CmpEq, CmpLt, CmpGt, Cloneabl
 		this(0, 0, 0, 0, 0, 0.0, false);
 	}
 
-	@Override
 	public String type_name() {
 		return "duration";
 	}
 
-	@Override
 	public String string_type() {
 		return XS_DURATION;
 	}
@@ -125,7 +124,6 @@ public class XSDuration extends CtrType implements CmpEq, CmpLt, CmpGt, Cloneabl
 	 * 
 	 * @return String representation of the duration stored
 	 */
-	@Override
 	public String string_value() {
 		String ret = "";
 		boolean did_something = false;
@@ -164,7 +162,7 @@ public class XSDuration extends CtrType implements CmpEq, CmpLt, CmpGt, Cloneabl
 			did_something = true;
 		}
 		if (seconds != 0) {
-			String doubStr = (Double.valueOf(seconds).toString());
+			String doubStr = (new Double(seconds).toString());
 			if (doubStr.endsWith(".0")) {
 				// string value of x.0 seconds is xS. e.g, 7.0S is converted to
 				// 7S.
@@ -322,7 +320,6 @@ public class XSDuration extends CtrType implements CmpEq, CmpLt, CmpGt, Cloneabl
 	 * @return New ResultSequence consisting of the time duration extracted
 	 * @throws DynamicError
 	 */
-	@Override
 	public ResultSequence constructor(ResultSequence arg) throws DynamicError {
 		ResultSequence rs = ResultSequenceFactory.create_new();
 
@@ -467,7 +464,6 @@ public class XSDuration extends CtrType implements CmpEq, CmpLt, CmpGt, Cloneabl
 				negative);
 	}
 
-	@Override
 	public Object clone() throws CloneNotSupportedException {
 		return new XSDuration(year(), month(), days(), hours(), minutes(),
 				seconds(), negative());
